<resources>
    <string name="app_name">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">not_registered</string>
    <string name="registered">registered</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="server_client_id">AIzaSyCvA8hkgRlCQXUQMHg01GO2nzaClpCQQUA</string>
    <string name="activity">Activity</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="home">home</string>
    <string name="homeactivity">Study Partner</string>
    <string name="account">Account</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="me_fragment">Me fragment</string>
    <string name="Enter">Enter</string>

    <string name="groupname">Group Name</string>

    <string name="Chemistry">Chemistry</string>
    <string name="IT">Information Technology</string>
    <string name="Business">Business</string>
    <string name="Math">Math</string>
    <string name="Physics">Physics</string>
    <string name="Biology">Biology</string>
    <string name="Mechanics">Mechanics</string>
    <string name="Art">Art</string>
    <string name="title_activity_maps">Map</string>

</resources>
